--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,16 @@ __pycache__/
 # C extensions
 *.so
 
+Data_heuristic/
+Data_human/
+
+#pycache
+__pycache__/
+
+# Distribution / packaging
+vscode/
+
+
 # Distribution / packaging
 .Python
 build/
